--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "scheme": "tamagui-app",
+    "scheme": "numb",
     "userInterfaceStyle": "automatic",
     "splash": {
       "backgroundColor": "#ddffe2",
