--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "upgrade:tamagui": "$npm_execpath up '*tamagui*' '@tamagui/*'"
+    "upgrade:tamagui": "$npm_execpath up '*tamagui*' '@tamagui/*'",
+    "test": "mocha"
   },
   "dependencies": {
     "@tamagui/animations-react-native": "^1.49.10",
@@ -42,6 +43,7 @@
     "@semantic-release/github": "8.0.6",
     "@semantic-release/npm": "9.0.1",
     "@semantic-release/release-notes-generator": "10.0.3",
+    "@types/mocha": "^10.0.1",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -52,14 +54,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.3",
     "semantic-release": "19.0.5",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "resolutions": {
-    "expo-font": "~11.4.0"
-  },
-  "overrides": {
     "expo-font": "~11.4.0"
   },
   "volta": {
