--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
     "test": "mocha"
   },
   "dependencies": {
-    "@tamagui/animations-react-native": "^1.49.10",
-    "@tamagui/babel-plugin": "^1.49.10",
-    "@tamagui/config": "^1.49.10",
-    "@tamagui/font-inter": "^1.49.10",
-    "@tamagui/lucide-icons": "^1.49.10",
-    "@tamagui/themes": "^1.49.10",
+    "@tamagui/animations-react-native": "^1.61.3",
+    "@tamagui/babel-plugin": "^1.61.3",
+    "@tamagui/config": "^1.61.3",
+    "@tamagui/font-inter": "^1.61.3",
+    "@tamagui/lucide-icons": "^1.61.3",
+    "@tamagui/theme": "^1.61.3",
+    "@tamagui/themes": "^1.61.3",
     "expo": "49.0.6",
     "expo-constants": "~14.4.2",
     "expo-font": "11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
-    "expo-splash-screen": "~0.20.5",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "tamagui": "^1.49.10"
+    "tamagui": "^1.61.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.22.17",
     "@google/semantic-release-replace-plugin": "1.1.0",
     "@manypkg/cli": "^0.20.0",
     "@semantic-release/changelog": "6.0.1",
@@ -45,21 +46,21 @@
     "@semantic-release/release-notes-generator": "10.0.3",
     "@types/mocha": "^10.0.1",
     "@types/react": "~18.2.14",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "conventional-changelog-conventionalcommits": "5.0.0",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.8",
     "semantic-release": "19.0.5",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "resolutions": {
     "expo-font": "~11.4.0"
