--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tamagui/animations-react-native": "^1.61.3",
     "@tamagui/babel-plugin": "^1.61.3",
     "@tamagui/config": "^1.61.3",
@@ -33,6 +34,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-persist-filesystem-storage": "^4.2.0",
     "tamagui": "^1.61.3"
   },
   "devDependencies": {
