--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tamagui/lucide-icons": "^1.61.3",
     "@tamagui/theme": "^1.61.3",
     "@tamagui/themes": "^1.61.3",
+    "convert": "^4.13.2",
     "expo": "49.0.6",
     "expo-constants": "~14.4.2",
     "expo-font": "11.4.0",
@@ -38,7 +39,9 @@
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "redux-persist-filesystem-storage": "^4.2.0",
-    "tamagui": "^1.61.3"
+    "string-math": "^1.2.2",
+    "tamagui": "^1.61.3",
+    "words-to-numbers": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.17",
