--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "react-native": "0.72.4",
     "react-native-blob-util": "^0.19.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-mmkv-storage": "^0.9.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
-    "redux-persist-filesystem-storage": "^4.2.0",
     "string-math": "^1.2.2",
     "tamagui": "^1.61.3",
     "words-to-numbers": "^1.5.1"
@@ -55,6 +55,7 @@
     "@semantic-release/release-notes-generator": "10.0.3",
     "@types/mocha": "^10.0.1",
     "@types/react": "~18.2.14",
+    "@types/string-math": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
