--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@semantic-release/github": "8.0.6",
     "@semantic-release/npm": "9.0.1",
     "@semantic-release/release-notes-generator": "10.0.3",
+    "@types/luxon": "^3.3.2",
     "@types/mocha": "^10.0.1",
     "@types/react": "~18.2.14",
     "@types/string-math": "^1.0.0",
