--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.72.4",
     "react-native-blob-util": "^0.19.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv-storage": "^0.9.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
